Fix width on mobile

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 60px 30px;
 }
 
 #title {
@@ -179,16 +179,6 @@ ul {
     flex-direction: column;
 }
 
-/*#footer {*/
-/*    box-sizing: border-box;*/
-/*    width: 100%;*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    justify-content: space-between;*/
-/*    padding: 0 10px;*/
-/*    align-items: center;*/
-/*}*/
-
 #itemLeft {
     display: flex;
     justify-content: flex-start;
@@ -254,7 +244,7 @@ ul {
     }
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (orientation: landscape) {
     #wrapper {
         width: 70%;
     }
